# python-misc

csv/: README.md  pyproject.toml
csv/sample_data/: batch-1.txt  batch-2.txt  batch-3.txt  batch-4.txt  expected-output.txt  record-1.txt  record-10.txt  record-11.txt  record-12.txt  record-13.txt  record-2.txt  record-3.txt  record-4.txt  record-5.txt  record-6.txt  record-7.txt  record-8.txt  record-9.txt
csv/sample_data/type2/: batch-type2-expected.csv  batch-type2.txt
csv/src/csv_merger/: __init__.py  __main__.py  _constants.py  _logging.py  batch_type2.py  cli.py  matcher.py  merger.py  models.py  parsers.py  writer.py
csv/src/csv_merger/pipeline/: __init__.py  _errors.py  alerting.py  config.py  locking.py  outbox.py  quiescence.py  reporting.py  retry.py  runner.py  state.py  transport.py
csv/tests/: _helpers.py  test_batch_type2.py  test_cli.py  test_cli_subcommands.py  test_color_logging.py  test_logging.py  test_matcher.py  test_merger.py  test_parsers.py  test_public_api.py  test_schema.py  test_writer.py
csv/tests/pipeline/: test_alerting.py  test_config.py  test_locking.py  test_outbox.py  test_quiescence.py  test_reporting.py  test_retry.py  test_runner.py  test_state.py  test_transport.py
