[project]
name = "csv-merger"
version = "0.1.0"
description = "Merge sectioned batch and record CSV files into a combined output."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Data Tools" }]
license = { text = "MIT" }
# Intentionally no runtime dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "mypy>=1.0",
]

[project.scripts]
csv-merger = "csv_merger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv_merger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
files = ["src/csv_merger"]
